# robust-multimodal-pd

./: .gitignore  README.md  RUNBOOK_OPENNEURO_DS001907.md  pyproject.toml
.github/workflows/: ci.yml
configs/: data_openneuro_ds001907.yaml  data_openneuro_ds001907_resnet2d.yaml  data_openneuro_ds001907_resnet2d_mil.yaml  data_openneuro_ds001907_resnet2d_mil_ft.yaml  data_openneuro_ds001907_resnet2d_mil_multi.yaml  data_ppmi.yaml  default.yaml  dev_benchmark_all.yaml  dev_benchmark_suite.yaml  eval_missingness.yaml  eval_missingness_openneuro_ds001907.yaml  model_fusion.yaml  model_moe.yaml  model_unimodal.yaml  openneuro_ds001907_resnet2d.yaml  openneuro_ds001907_resnet2d_mil.yaml  openneuro_ds001907_resnet2d_mil_ft.yaml  openneuro_ds001907_resnet2d_mil_multi.yaml  openneuro_ds001907_simple.yaml  openneuro_labels.yaml  paper_benchmark.yaml  ppmi_columns.yaml  ppmi_imaging_upgrade.yaml  ppmi_imaging_upgrade_imaging_available.yaml  ppmi_imaging_upgrade_progression.yaml  ppmi_studydata.yaml  quickstart.yaml
runs/run_20260201_210705/: calibration.csv  conformal_model.pkl  degradation.csv  model.pt  pr_curve.csv  preprocess.pkl  results.yaml  (+2 more)
scripts/: build_cnn3d_embeddings.py  build_resnet2d_embeddings.py  build_resnet2d_mil_embeddings.py  ppmi_build_dataset.py  ppmi_eval_report.py  ppmi_imaging_upgrade.py  ppmi_meaningful_suite.py  ppmi_smoke.sh  ppmi_stress_test.py  ppmi_train_tabular.py  quickstart.sh  run_all.sh  submit_dual_h200.py  submit_sweep.py  verify_loaders.py
slurm/: run_ppmi_meaningful_suite_cpu2.sbatch
tests/: test_pd_fusion.py  test_ppmi_merge.py
(+64 files in other folders)
